# MyloAir

./: .eslintrc.js  .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json  tsconfig.json  webpack.renderer.config.js
.agent/workflows/: new-task-superpowers.md
docs/: FAQ.md  database_debugging.md  database_separation.md  electron-to-tauri-analysis.md  tauri_dev_build_solution.md  test_cases.md  test_execution_plan.md  testing-strategy.md
openspec/changes/rework-group-and-note-group-sorting/: design.md  manual-test-checklist.md  proposal.md  tasks.md
openspec/specs/master-password-access-control/: spec.md
scripts/: create-dmg.sh  set-tauri-env.js
src/: global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  groups.rs  mod.rs  notes.rs  passwords.rs  security.rs  settings.rs  window.rs
src-tauri/src/models/: group.rs  mod.rs  note.rs  password.rs  setting.rs
src-tauri/src/services/: database.rs  encryption.rs  mod.rs
src/renderer/: App.tsx  electronAPI-mock.ts  index.html  index.tsx
src/renderer/api/: tauriAPI.ts
src/renderer/columns/: historyColumns.tsx  passwordColumns.tsx
src/renderer/components/: GroupTree.tsx  ImportExportModal.tsx  MasterPasswordGate.tsx  NoteGroupTree.tsx  NoteManager.tsx  PasswordDetailModal.tsx  PasswordGenerator.tsx  UserSettings.tsx
src/renderer/hooks/: useBackup.ts  useGroups.ts  useIntegrity.ts  useNotes.ts  usePasswords.ts
src/shared/: types.ts
src/types/: external-modules.d.ts
(+22 files in other folders)
